# axum_server

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
config/: config.toml
sqls/: 01-schema-sys_user.sql  02-schema-sys_role.sql  03-schema-sys_menu.sql  04-schema-sys_dept.sql  05-schema-sys_dept_menu.sql  06-schema-sys_user_dept_role copy.sql  07-schema-msg_record.sql  08-schema-opt_car_brand.sql  09-schema-opt_car_series.sql  10-schema-opt_region.sql  99-data-sys_menu_perm.sql
src/: constants.rs  main.rs
src/_init/: mod.rs  mysql.rs
src/common/: mod.rs
src/common/error/: from.rs  mod.rs
src/common/request/: mod.rs
src/common/response/: constants.rs  mod.rs
src/common/trace/: formatter.rs  init.rs  mod.rs
src/config/: mod.rs
src/config/toml_file/: jwt.rs  log.rs  mod.rs  mysql.rs  rabbitmq.rs  redis.rs  server.rs
src/controller/: mod.rs
src/controller/car/: mod.rs
src/controller/region/: delete.rs  insert.rs  mod.rs  parse.rs  select.rs  update.rs
src/controller/user/: mod.rs  select.rs  update.rs
src/middleware/: mod.rs
src/middleware/jwt/: claims.rs  error.rs  mod.rs  secret.rs  token.rs
src/middleware/layer/: error_layers.rs  http_layers.rs  limit_layers.rs  mod.rs  trace_layers.rs
src/middleware/privilege/: access.rs  mod.rs
src/model/: mod.rs
src/model/opt/: mod.rs  region.rs
src/model/sys/: dept.rs  dept_menu.rs  menu.rs  mod.rs  role.rs  user.rs  user_dept_role.rs
src/route/: mod.rs
src/route/admin/: dept.rs  menu.rs  mod.rs  perm.rs  role.rs  user.rs
src/route/base/: connect.rs  (+2 more)
src/state/: mod.rs  user.rs
src/store/: mod.rs  rabbitmq.rs  redis.rs
src/utils/: mod.rs
(+97 files in other folders)
