[package]
name = "srv"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["As1rkiv <as1rkiv@outlook.com>"]
description = "Axum Web Server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
axum = { version = "0.7.7", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
base64 = "0.22.1"
bb8 = "0.8.5"
bb8-redis = "0.17.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
dashmap = { version = "6.1.0", features = ["serde", "inline"] }
futures = "0.3.31"
jsonwebtoken = "9.3.0"
lapin = { version = "2.5.0", features = ["serde_json"] }
libc = "0.2.165"
rand = "0.8.5"
redis = "0.27.3"
regex = "1.11.1"
reqwest = "0.12.9"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = [
  "runtime-tokio-rustls",
  "mysql",
  "uuid",
  "time",
  "chrono",
] }
thiserror = "2.0.3"
tokio = { version = "1.40.0", features = ["full", "tracing"] }
toml = "0.8.19"
tower-http = { version = "0.6.1", features = [
  "fs",
  "trace",
  "cors",
  "catch-panic",
  "set-header",
  "sensitive-headers",
  "async-compression",
  "compression-full",
  "timeout",
  "request-id",
  "limit",
] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time"] }
uuid = "1.10.0"
validator = { version = "0.19.0", features = ["derive"] }
